--- a/Section-34/assets/css/style.css
+++ b/Section-34/assets/css/style.css
@@ -1,13 +1,14 @@
 :root{
     --primary-color: #0A1128;
     --white-color: #FFFFFF;
+    --ligth-gray-color: #EEEEEE;
     --gap: 3rem; /* 10px * 3 */
-    --max-width: 1200px
 }
 
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html{
@@ -16,7 +17,7 @@ html{
 
 /* 
 font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif;                                           
+font-family: 'Open Sans', sans-serif;
 */
 
 body{
@@ -54,6 +55,10 @@ h6{
     font-size: 3.5rem;
 }
 
+a{
+    text-decoration: none;
+}
+
 .main-bg{
     background-image: url('../img/main-bg.svg');
     background-position: center center;
@@ -65,59 +70,64 @@ h6{
     background-color: var(--white-color);
 }
 
-.section{
-    min-height: 100vh;
-}
-
-#home{
-    padding: 5rem 0 0;
-}
-
 .main-content{
-    max-width: var(--max-width);
+    max-width: 1200px;
     margin: 0 auto;
     padding: var(--gap);
+}
+
+.section{
+    min-height: 100vh;
 }
 
 .menu{
     background-color: var(--white-color);
     position: fixed;
-    top: 0;
     width: 100%;
+    top: 0;
+    border-bottom: 1px var(--ligth-gray-color) solid;
 }
 
-.menu div{
-    max-width: var(--max-width);
+.menu-content{
     display: flex;
-    height: 6rem;
-    padding: 0 var(--gap);
-    margin: 0 auto;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
-.menu div .logo{
+.menu h1{
     font-size: 2.3rem;
 }
 
 .menu a{
     color: var(--primary-color);
-    text-decoration: none;
 }
 
-.menu li{
-    list-style-type: none;
-    display: inline;
-    padding: 0 2rem;
-    height: 6rem;
+.menu ul{
+    list-style: none;
+    display: flex;
 }
 
-@media (max-width: 800px){
-    .menu{
-        z-index: -1;
-    }
+.menu ul li a{
+    display: block;
+    padding: 2rem;
+    font-size: 1.8rem;
+    position: relative;
+}
 
-    #home{
-        padding: 0;
-    }
+.menu ul li a::after{
+    content: '';
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 0;
+    height: 0.1rem;
+    background-color: black;
+    transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover::after{
+    width: 50%;
+    left: 25%;
 }
